# Jacobian-Curve-Libgcrypt

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/jacobian_curve/: jacobian_curve.c  jacobian_curve.h
src/params/: params.h
src/point/: point.c  point.h
src/utils/: utils.c  utils.h
